--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       TZ: 'Asia/Shanghai'
       GITLAB_OMNIBUS_CONFIG: |
-        external_url 'http://gitlab.wcxst.com'
+        external_url 'http://gitlab.wcxst.com:36790'
         gitlab_rails['gitlab_shell_ssh_port'] = 2224
     ports:
       - '36790:36790'
